change lorem ipsum

--- a/starter-files/index.html
+++ b/starter-files/index.html
@@ -19,7 +19,7 @@
 		<section class="slide-even" id="slide-2">
 			<div class="image"><img src="http://placehold.it/250x250"></div>
 			<article class="text">
-			   	<p>I wrote you 365 letters. I wrote you everyday for a year. I won't eat my cereal. There's a hundred thousand streets in this city. If I drive for you, you give me a time and a place, I give you a five minute window.</p>
+			   	<p>Cultivar, single shot cream lungo espresso shop java so cultivar caffeine. White, as body aromatic grounds id steamed cultivar saucer filter wings body. Pumpkin spice mug frappuccino, medium galão, est sweet, trifecta mug blue mountain iced dripper. Organic as variety crema body black, blue mountain brewed id bar foam cultivar.</p>
 			</article>
 		</section>
 
@@ -29,7 +29,7 @@
 
 		<section class="slide-even" id="slide-4">
 			<article class="text">
-			   	<p>All my characters are me. I'm not a good enough actor to become a character. I hear about actors who become the role and I think 'I wonder what that feels like'. Because for me, they're all me. I relate to these characters because aspects of their personality are like me. And I just turn up the parts of myself that are them and turn down the parts that aren't. Not to discriminate against budgets, I feel that independent films tend to ask more questions and don't pretend to know as much as the bigger films, which tend to think they know everything. I think the one thing I love most about being an adult is the right to buy candy whenever and wherever I want.</p>
+			   	<p>Aroma plunger pot trifecta, instant steamed sugar bar single shot. Affogato, brewed, a aromatic java cortado whipped. Turkish, single origin strong robust cinnamon flavour extra body. Extra crema bar milk id, crema latte extraction sweet fair trade. Aroma plunger pot trifecta, instant steamed sugar bar single shot. Affogato, brewed, a aromatic java cortado whipped. Turkish, single origin strong robust cinnamon flavour extra body. Extra crema bar milk id, crema latte extraction sweet fair trade.</p>
 			</article>
 		</section>
 
@@ -48,7 +48,7 @@
 		<section class="slide-even" id="slide-8">
 			<div class="image"><img src="http://placehold.it/250x250"></div>
 			<article class="text">
-			   	<p>I wrote you 365 letters. I wrote you everyday for a year. I won't eat my cereal. There's a hundred thousand streets in this city. If I drive for you, you give me a time and a place, I give you a five minute window.</p>
+			   	<p>That ristretto grinder aftertaste at cream white iced. Americano, in acerbic irish con panna latte a affogato cultivar. Est grinder filter cultivar cup organic, aroma con panna fair trade cappuccino espresso. Robusta cup, caffeine siphon java americano cultivar.</p>
 			</article>
 		</section>
 
@@ -58,7 +58,7 @@
 
 		<section class="slide-even" id="slide-10">
 			<article class="text">
-			   	<p>I could be fun, if you want. I could be pensive, uhh... smart, supersticious, brave? And I, uhh, I can be light on my feet. I could be whatever you want. You just tell me what you want, and I'm gonna be that for you. I'm really not good at knowing what people want, because don't have that talent. If ever I try to predict, I'm sure I will be instantly humbled. I try not to make to many movies. I get sick of myself, so I can imagine how everyone else feels. I fantasized about robbing banks for a long time, ever since I was a kid</p>
+			   	<p>Café au lait grinder aroma grinder et aroma, ut at pumpkin spice, mocha seasonal crema caffeine iced qui, mazagran blue mountain sweet coffee con panna medium. Half and half, robusta carajillo robusta mug, a, dark medium strong mocha whipped so doppio. Mazagran roast mocha, siphon affogato, a eu mug cultivar sugar, to go, caffeine, dripper flavour filter affogato kopi-luwak cream. Mocha cup medium affogato, half and half seasonal single shot wings, aftertaste cup variety in, bar, crema grounds affogato iced acerbic decaffeinated dripper cappuccino roast. Kopi-luwak crema trifecta aroma cinnamon eu coffee, siphon french press dark, carajillo con panna latte mazagran milk irish, rich robust spoon carajillo con panna whipped.</p>
 			</article>
 		</section>
 
